--- a/is290_project_1/Web.config
+++ b/is290_project_1/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-is290_project_1-20181009102838.mdf;Initial Catalog=aspnet-is290_project_1-20181009102838;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="is290_project_1Context" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=is290_project_1Context-20181009223607; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|is290_project_1Context-20181009223607.mdf" providerName="System.Data.SqlClient" />
